--- a/code/analysis/03_ellipsis_trends/03_west_side_neighborhoods.Rmd
+++ b/code/analysis/03_ellipsis_trends/03_west_side_neighborhoods.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "03_west_side_neighborhoods"
 output: html_document
+runtime: shiny
 ---
 
 
@@ -9,9 +9,6 @@ output: html_document
 rm(list = ls())
 source("header.R")
 library(lubridate)
-library(tidygeocoder)
-library(mapview)
-library(mapedit)
 library(htmltools)
 library(shiny)
 library(rsconnect)
@@ -82,6 +79,8 @@ yearly_panel <- read_csv("data/raw/yearly_panel_dataset.csv")
 
 ```
 
+
+
 ```{r}
 
 census_west <- st_filter(census_walk, westside)
@@ -93,6 +92,8 @@ projects_west <- st_filter(cha_projects, census_west)
 
   
 ```
+
+
 
 ```{r}
 census_west_homs <- homs_west %>% 
@@ -118,37 +119,38 @@ census_west_homs_geom <- census_west %>%
   left_join(census_west_homs_full)
 ```
 
+```{r}
 
+ggplot(data = all_ellipses, aes(x = year, y = -current_x)) + 
+  geom_line()
 
+```
 
 ```{r}
 
-year_select <- 1960 
-census_west_homs_plot <- census_west_homs_geom %>% filter(year == year_select)
+reg <- glm(homicides ~ total_pop+ SHAPE_AREA, family = poisson(), data = census_west_homs_geom)
+summary(reg)
 
-homs_plot <- homs_west %>% filter(year_decade == year_select)
+census_west_homs_geom$pred_homicides_pop_size <- predict(reg, type = "response")
+census_west_homs_geom$res_homicides_pop_size <- residuals(reg, type = "response")
 
-projects <- projects_west %>% filter(opened <= year_select+5)
+reg <- glm(homicides ~ SHAPE_AREA, family = poisson(), data = census_west_homs_geom)
+summary(reg)
 
-leaflet() %>% 
-  addProviderTiles(providers$Esri.WorldGrayCanvas) %>%
-  addPolygons(data = census_west_homs_plot
-              , fillOpacity = 0.2
-              , weight = 1
-              ,  label = ~sprintf(
-      "GICS: %s<br>Homicides: %s<br>Over 1 PPR: %s<br>Black Share: %s<br>Median Value: $%s",
-      GISJOIN_1970, homicides, round(share_over_1_ppr, 2), round(share_black, 2),  round(median_value, 0)) %>% lapply(htmltools::HTML)
-  ) %>% 
-  addPolygons(data = projects
-              , color = "red"
-              , label = ~paste0(name, ": ", opened)) %>%
-   addControl(paste("Homicides:", year_select-4, "-", year_select + 5), position = "topright") %>% 
-   addCircleMarkers(data = homs_plot
-                   , radius = 1
-                   , color = "black"
-                   , label = ~as.character(year)) 
+census_west_homs_geom$pred_homicides_size <- predict(reg, type = "response")
+census_west_homs_geom$res_homicides_size <- residuals(reg, type = "response")
+
+
+reg <- feglm(homicides ~ total_pop + SHAPE_AREA + share_under_25 + share_black*share_over_1_ppr*share_under_25 
+            + share_foreign*share_over_1_ppr*share_under_25 
+            + vacant_homes + unemployment_rate + college_grads + median_value   |  year
+            ,family = poisson(), data = census_west_homs_geom)
+census_west_homs_geom$res_homicides_all <- residuals(reg, type = "response")
+
+
 
 ```
+
 
 Next steps
 
@@ -159,292 +161,195 @@ Next steps
 - show development of predicted homicides and other metrics 
 
 
-```{r}
-library(shiny)
-library(leaflet)
-library(dplyr)
-library(htmltools)
-
-
-choices_select <-  c("Total Homicides" = "homicides",
-             "Total Housing Units" = "total_housing_units",
-             "Total Population" = "total_pop",
-             "Under Age 25 (%)" = "share_under_25",
-             "% Units Over 1 PPR" = "share_over_1_ppr",
-             "Black Share (%)" = "share_black",
-             "Black * Over 1 PPR (%)" = "black_share_over_1_ppr",
-             "Median Home Value ($)" = "median_value",
-             "Vacant Homes (%)" = "share_vacant_homes",
-             "In Labor Force (%)" = "in_labor_force",
-             "Foreign Born (%)" = "foreign_born"
-           )
-
-ui <- fluidPage(
-  tags$style(type = "text/css", "
-    #controlPanel {
-      background: white;
-      padding: 10px;
-      border-radius: 4px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
-      z-index: 1000;
-    }
-  "),
-  
-  fluidRow(
-  column(width = 6, leafletOutput("map1", height = "700px"), 
-         absolutePanel(
-             id = "controlPanel1", class = "control-panel", fixed = TRUE,
-             top = 10, left = 10, width = 250,
-             selectInput("shade_var1", "Shade census tracts by:",
-                         choices = choices_select,
-                         selected = "homicides"),
-             sliderInput("selected_year1", "Select Year:",
-                         min = 1940, max = 1990, step = 10, value = 1960,
-                         sep = "", animate = TRUE)
-           )),
-  
-  column(width = 6, leafletOutput("map2", height = "700px"), 
-         absolutePanel(
-             id = "controlPanel2", class = "control-panel", fixed = TRUE,
-             top = 10, right = 10, width = 250,
-             selectInput("shade_var2", "Shade census tracts by:",
-                         choices = choices_select,
-                         selected = "share_over_1_ppr"),
-             sliderInput("selected_year2", "Select Year:",
-                         min = 1940, max = 1990, step = 10, value = 1960,
-                         sep = "", animate = TRUE)
-           ) )
-  )
-)
-
-server <- function(input, output, session) {
-
-  # Filtered reactive datasets for both maps
-  filtered_data <- function(year_input) {
-    list(
-      census = census_west_homs_geom %>% filter(year == year_input),
-      homs = homs_west %>% filter(year_decade == year_input),
-      projects = projects_west %>% filter(opened <= year_input)
-    )
-  }
-
-  # Map 1
-  output$map1 <- renderLeaflet({
-    leaflet() %>%
-      addProviderTiles(providers$Esri.WorldGrayCanvas) %>% 
-      addPolygons(
-        data = westside,
-        fillOpacity = 0.7)
-  })
-
-  observe({
-    data1 <- filtered_data(input$selected_year1)
-    var1 <- input$shade_var1
-    pal1 <- colorNumeric("YlOrRd", domain = unlist(data1$census[[var1]]))
-
-    leafletProxy("map1") %>%
-      clearShapes() %>%
-      addPolygons(
-        data = data1$census,
-        fillColor = ~pal1(get(var1)),
-        fillOpacity = 0.7,
-        color = "white",
-        weight = 1,
-        label = ~sprintf(
-          "GICS: %s<br>Homicides: %s<br>Over 1 PPR: %s<br>Black Share: %s<br>Under Age 25: %s",
-          GISJOIN_1970, homicides, round(share_over_1_ppr, 2), round(share_black, 2), round(share_under_25, 2)
-        ) %>% lapply(HTML)
-      ) %>%
-      addPolygons(data = data1$projects,
-                  color = "blue",
-                  label = ~paste0(name, ": ", opened))
-      # addCircleMarkers(data = data1$homs,
-      #                  radius = 1,
-      #                  color = "black",
-      #                  opacity = 0.2,
-      #                  label = ~as.character(year))
-  })
-
-  # Map 2
-  output$map2 <- renderLeaflet({
-    leaflet() %>%
-      addProviderTiles(providers$Esri.WorldGrayCanvas)%>% 
-      addPolygons(
-        data = westside,
-        fillOpacity = 0.7)
-  })
-
-  observe({
-    data2 <- filtered_data(input$selected_year2)
-    var2 <- input$shade_var2
-    pal2 <- colorNumeric("YlOrRd", domain = unlist(data2$census[[var2]]))
-
-    leafletProxy("map2") %>%
-      clearShapes() %>%
-      addPolygons(
-        data = data2$census,
-        fillColor = ~pal2(get(var2)),
-        fillOpacity = 0.7,
-        color = "white",
-        weight = 1,
-        label = ~sprintf(
-          "GICS: %s<br>Homicides: %s<br>Over 1 PPR: %s<br>Black Share: %s<br>Under Age 25: %s",
-          GISJOIN_1970, homicides, round(share_over_1_ppr, 2), round(share_black, 2), round(share_under_25, 2)
-        ) %>% lapply(HTML)
-      ) %>%
-      addPolygons(data = data2$projects,
-                  color = "blue",
-                  label = ~paste0(name, ": ", opened)) 
-      # addCircleMarkers(data = data2$homs,
-      #                  radius = 1,
-      #                  color = "black",
-      #                  opacity = 0.2,
-      #                  label = ~as.character(year))
-  })
-}
-
-shinyApp(ui, server)
-
-
-```
 
 
 ```{r}
 
-library(shiny)
-library(leaflet)
-library(dplyr)
-library(htmltools)
+saveRDS(census_west_homs_geom, "output/westside_interactive_maps/census_west_homs_geom.rds")
+saveRDS(homs_west, "output/westside_interactive_maps/homs_west.rds")
+saveRDS(projects_west, "output/westside_interactive_maps/projects_west.rds")
+saveRDS(westside, "output/westside_interactive_maps/westside.rds")
 
-choices_select <-  c("Total Homicides" = "homicides",
-                     "Total Housing Units" = "total_housing_units",
-                     "Total Population" = "total_pop",
-                     "Under Age 25 (%)" = "share_under_25",
-                     "% Units Over 1 PPR" = "share_over_1_ppr",
-                     "Black Share (%)" = "share_black",
-                     "Black * Over 1 PPR (%)" = "black_share_over_1_ppr",
-                     "Median Home Value ($)" = "median_value",
-                     "Vacant Homes (%)" = "share_vacant_homes",
-                     "In Labor Force (%)" = "in_labor_force",
-                     "Foreign Born (%)" = "foreign_born"
-)
-
-ui <- fluidPage(
-  tags$style(type = "text/css", "
-    .control-panel {
-      background: white;
-      padding: 6px;
-      font-size: 12px;
-      border-radius: 4px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.15);
-      z-index: 1000;
-    }
-    .control-panel .form-control {
-      font-size: 12px;
-      height: 30px;
-      padding: 2px 6px;
-    }
-    .control-panel .form-group {
-      margin-bottom: 6px;
-    }
-    .control-panel .irs--shiny .irs-bar,
-    .control-panel .irs--shiny .irs-line {
-      height: 4px;
-    }
-  "),
-  
-  fluidRow(
-    column(width = 6,
-           leafletOutput("map1", height = "400px"),
-           absolutePanel(id = "controlPanel1", class = "control-panel", fixed = TRUE,
-             top = 200, left = 20, width = 180,
-             selectInput("shade_var1", "Shade census tracts by:", choices = choices_select, selected = "homicides"),
-             sliderInput("selected_year1", "Select Year:", min = 1940, max = 1990, step = 10, value = 1960, sep = "", animate = TRUE)
-           )
-    ),
-    column(width = 6,
-           leafletOutput("map2", height = "400px"),
-           absolutePanel(id = "controlPanel2", class = "control-panel", fixed = TRUE,
-             top = 200, left = "52%", width = 180,
-             selectInput("shade_var2", "Shade census tracts by:", choices = choices_select, selected = "share_over_1_ppr"),
-             sliderInput("selected_year2", "Select Year:", min = 1940, max = 1990, step = 10, value = 1960, sep = "", animate = TRUE)
-           )
-    )
-  ),
-  
-  fluidRow(
-    column(width = 6,
-           leafletOutput("map3", height = "400px"),
-           absolutePanel(id = "controlPanel3", class = "control-panel", fixed = TRUE,
-             bottom = 15, left = 20, width = 180,
-             selectInput("shade_var3", "Shade census tracts by:", choices = choices_select, selected = "share_black"),
-             sliderInput("selected_year3", "Select Year:", min = 1940, max = 1990, step = 10, value = 1960, sep = "", animate = TRUE)
-           )
-    ),
-    column(width = 6,
-           leafletOutput("map4", height = "400px"),
-           absolutePanel(id = "controlPanel4", class = "control-panel", fixed = TRUE,
-             bottom = 15, left = "52%", width = 180,
-             selectInput("shade_var4", "Shade census tracts by:", choices = choices_select, selected = "median_value"),
-             sliderInput("selected_year4", "Select Year:", min = 1940, max = 1990, step = 10, value = 1960, sep = "", animate = TRUE)
-           )
-    )
-  )
-)
-
-server <- function(input, output, session) {
-
-  filtered_data <- function(year_input) {
-    list(
-      census = census_west_homs_geom %>% filter(year == year_input),
-      homs = homs_west %>% filter(year_decade == year_input),
-      projects = projects_west %>% filter(opened <= year_input)
-    )
-  }
-
-  render_map <- function(map_id, year_input, var_input) {
-    data <- filtered_data(year_input)
-    pal <- colorNumeric("YlOrRd", domain = unlist(data$census[[var_input]]))
-
-    leafletProxy(map_id) %>%
-      clearShapes() %>%
-      addPolygons(
-        data = data$census,
-        fillColor = ~pal(get(var_input)),
-        fillOpacity = 0.7,
-        color = "white",
-        weight = 1,
-        label = ~sprintf(
-          "GICS: %s<br>Homicides: %s<br>Over 1 PPR: %s<br>Black Share: %s<br>Under Age 25: %s",
-          GISJOIN_1970, homicides, round(share_over_1_ppr, 2), round(share_black, 2), round(share_under_25, 2)
-        ) %>% lapply(HTML)
-      ) %>%
-      addPolygons(data = data$projects,
-                  color = "blue",
-                  label = ~paste0(name, ": ", opened))
-      # Uncomment below to add point markers
-      # addCircleMarkers(data = data$homs, radius = 1, color = "black", opacity = 0.2)
-  }
-
-  for (i in 1:4) {
-    local({
-      map_id <- paste0("map", i)
-      shade_var <- paste0("shade_var", i)
-      year_input <- paste0("selected_year", i)
-
-      output[[map_id]] <- renderLeaflet({
-        leaflet() %>%
-          addProviderTiles(providers$Esri.WorldGrayCanvas) %>%
-          addPolygons(data = westside, fillOpacity = 0.7)
-      })
-
-      observe({
-        render_map(map_id, input[[year_input]], input[[shade_var]])
-      })
-    })
-  }
-}
-
-shinyApp(ui, server)
-
+save.image("output/westside_interactive_maps/my_workspace.RData")
 ```
+
+
+
+
+<!-- ```{r} -->
+<!-- library(shiny) -->
+<!-- library(leaflet) -->
+<!-- library(dplyr) -->
+<!-- library(htmltools) -->
+
+
+<!-- choices_select <-  c("Total Homicides" = "homicides", -->
+<!--              "Total Housing Units" = "total_housing_units", -->
+<!--              "Total Population" = "total_pop", -->
+<!--              "Under Age 25 (%)" = "share_under_25", -->
+<!--              "% Units Over 1 PPR" = "share_over_1_ppr", -->
+<!--              "Black Share (%)" = "share_black", -->
+<!--              "Black * Over 1 PPR (%)" = "black_share_over_1_ppr", -->
+<!--              "Median Home Value ($)" = "median_value", -->
+<!--              "Vacant Homes (%)" = "share_vacant_homes", -->
+<!--              "In Labor Force (%)" = "in_labor_force", -->
+<!--              "Foreign Born (%)" = "foreign_born" -->
+<!--            ) -->
+
+<!-- ui <- fluidPage( -->
+<!--   tags$style(type = "text/css", " -->
+<!--     #controlPanel { -->
+<!--       background: white; -->
+<!--       padding: 10px; -->
+<!--       border-radius: 4px; -->
+<!--       box-shadow: 0 0 15px rgba(0,0,0,0.2); -->
+<!--       z-index: 1000; -->
+<!--     } -->
+<!--   "), -->
+
+<!--   fluidRow( -->
+<!--   column(width = 6, leafletOutput("map1", height = "700px"),  -->
+<!--          absolutePanel( -->
+<!--              id = "controlPanel1", class = "control-panel", fixed = TRUE, -->
+<!--              top = 10, left = 10, width = 250, -->
+<!--              selectInput("shade_var1", "Shade census tracts by:", -->
+<!--                          choices = choices_select, -->
+<!--                          selected = "homicides"), -->
+<!--              sliderInput("selected_year1", "Select Year:", -->
+<!--                          min = 1940, max = 1990, step = 10, value = 1960, -->
+<!--                          sep = "", animate = TRUE) -->
+<!--            )), -->
+
+<!--   column(width = 6, leafletOutput("map2", height = "700px"),  -->
+<!--          absolutePanel( -->
+<!--              id = "controlPanel2", class = "control-panel", fixed = TRUE, -->
+<!--              top = 10, right = 10, width = 250, -->
+<!--              selectInput("shade_var2", "Shade census tracts by:", -->
+<!--                          choices = choices_select, -->
+<!--                          selected = "share_over_1_ppr"), -->
+<!--              sliderInput("selected_year2", "Select Year:", -->
+<!--                          min = 1940, max = 1990, step = 10, value = 1960, -->
+<!--                          sep = "", animate = TRUE) -->
+<!--            ) ) -->
+<!--   ) -->
+<!-- ) -->
+
+<!-- server <- function(input, output, session) { -->
+
+<!--   # Filtered reactive datasets for both maps -->
+<!--   filtered_data <- function(year_input) { -->
+<!--     list( -->
+<!--       census = census_west_homs_geom %>% filter(year == year_input), -->
+<!--       homs = homs_west %>% filter(year_decade == year_input), -->
+<!--       projects = projects_west %>% filter(opened <= year_input) -->
+<!--     ) -->
+<!--   } -->
+
+<!--   # Map 1 -->
+<!--   output$map1 <- renderLeaflet({ -->
+<!--     leaflet() %>% -->
+<!--       addProviderTiles(providers$Esri.WorldGrayCanvas) %>%  -->
+<!--       addPolygons( -->
+<!--         data = westside, -->
+<!--         fillOpacity = 0.7) -->
+<!--   }) -->
+
+<!--   observe({ -->
+<!--     data1 <- filtered_data(input$selected_year1) -->
+<!--     var1 <- input$shade_var1 -->
+<!--     pal1 <- colorNumeric("YlOrRd", domain = unlist(data1$census[[var1]])) -->
+
+<!--     leafletProxy("map1") %>% -->
+<!--       clearShapes() %>% -->
+<!--       addPolygons( -->
+<!--         data = data1$census, -->
+<!--         fillColor = ~pal1(get(var1)), -->
+<!--         fillOpacity = 0.7, -->
+<!--         color = "white", -->
+<!--         weight = 1, -->
+<!--         label = ~sprintf( -->
+<!--           "GICS: %s<br>Homicides: %s<br>Over 1 PPR: %s<br>Black Share: %s<br>Under Age 25: %s", -->
+<!--           GISJOIN_1970, homicides, round(share_over_1_ppr, 2), round(share_black, 2), round(share_under_25, 2) -->
+<!--         ) %>% lapply(HTML) -->
+<!--       ) %>% -->
+<!--       addPolygons(data = data1$projects, -->
+<!--                   color = "blue", -->
+<!--                   label = ~paste0(name, ": ", opened)) -->
+<!--       # addCircleMarkers(data = data1$homs, -->
+<!--       #                  radius = 1, -->
+<!--       #                  color = "black", -->
+<!--       #                  opacity = 0.2, -->
+<!--       #                  label = ~as.character(year)) -->
+<!--   }) -->
+
+<!--   # Map 2 -->
+<!--   output$map2 <- renderLeaflet({ -->
+<!--     leaflet() %>% -->
+<!--       addProviderTiles(providers$Esri.WorldGrayCanvas)%>%  -->
+<!--       addPolygons( -->
+<!--         data = westside, -->
+<!--         fillOpacity = 0.7) -->
+<!--   }) -->
+
+<!--   observe({ -->
+<!--     data2 <- filtered_data(input$selected_year2) -->
+<!--     var2 <- input$shade_var2 -->
+<!--     pal2 <- colorNumeric("YlOrRd", domain = unlist(data2$census[[var2]])) -->
+
+<!--     leafletProxy("map2") %>% -->
+<!--       clearShapes() %>% -->
+<!--       addPolygons( -->
+<!--         data = data2$census, -->
+<!--         fillColor = ~pal2(get(var2)), -->
+<!--         fillOpacity = 0.7, -->
+<!--         color = "white", -->
+<!--         weight = 1, -->
+<!--         label = ~sprintf( -->
+<!--           "GICS: %s<br>Homicides: %s<br>Over 1 PPR: %s<br>Black Share: %s<br>Under Age 25: %s", -->
+<!--           GISJOIN_1970, homicides, round(share_over_1_ppr, 2), round(share_black, 2), round(share_under_25, 2) -->
+<!--         ) %>% lapply(HTML) -->
+<!--       ) %>% -->
+<!--       addPolygons(data = data2$projects, -->
+<!--                   color = "blue", -->
+<!--                   label = ~paste0(name, ": ", opened))  -->
+<!--       # addCircleMarkers(data = data2$homs, -->
+<!--       #                  radius = 1, -->
+<!--       #                  color = "black", -->
+<!--       #                  opacity = 0.2, -->
+<!--       #                  label = ~as.character(year)) -->
+<!--   }) -->
+<!-- } -->
+
+<!-- shinyApp(ui, server) -->
+
+
+<!-- ``` -->
+
+<!-- ```{r} -->
+
+<!-- year_select <- 1960  -->
+<!-- census_west_homs_plot <- census_west_homs_geom %>% filter(year == year_select) -->
+
+<!-- homs_plot <- homs_west %>% filter(year_decade == year_select) -->
+
+<!-- projects <- projects_west %>% filter(opened <= year_select+5) -->
+
+<!-- leaflet() %>%  -->
+<!--   addProviderTiles(providers$Esri.WorldGrayCanvas) %>% -->
+<!--   addPolygons(data = census_west_homs_plot -->
+<!--               , fillOpacity = 0.2 -->
+<!--               , weight = 1 -->
+<!--               ,  label = ~sprintf( -->
+<!--       "GICS: %s<br>Homicides: %s<br>Over 1 PPR: %s<br>Black Share: %s<br>Median Value: $%s", -->
+<!--       GISJOIN_1970, homicides, round(share_over_1_ppr, 2), round(share_black, 2),  round(median_value, 0)) %>% lapply(htmltools::HTML) -->
+<!--   ) %>%  -->
+<!--   addPolygons(data = projects -->
+<!--               , color = "red" -->
+<!--               , label = ~paste0(name, ": ", opened)) %>% -->
+<!--    addControl(paste("Homicides:", year_select-4, "-", year_select + 5), position = "topright") %>%  -->
+<!--    addCircleMarkers(data = homs_plot -->
+<!--                    , radius = 1 -->
+<!--                    , color = "black" -->
+<!--                    , label = ~as.character(year))  -->
+
+<!-- ``` -->
